public/stylesheets/style.css
body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  width: 960px;
  height: 500px;
  position: relative;
  margin: auto;
}

h1, h4 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: center;
}

body {
        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
        width: 960px;
        height: 500px;
        position: relative;
    }
    
svg {
    width: 100%;
    height: 100%;
    position: center;
}

path.slice{
    stroke-width:2px;
}

text{
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

polyline{
    opacity: .3;
    stroke: black;
    stroke-width: 2px;
    fill: none;
}

.labelValue
{
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 60%;
    opacity: .5;

}

label {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: normal;
}

.toolTip {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    position: absolute;
    display: none;
    width: auto;
    height: auto;
    background: none repeat scroll 0 0 white;
    border: 0 none;
    border-radius: 8px 8px 8px 8px;
    box-shadow: -3px 3px 15px #888888;
    color: black;
    font: 12px sans-serif;
    padding: 5px;
    text-align: center;
}


.legend {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 60%;
}
rect {
    stroke-width: 2;
}

text {
    font: 10px sans-serif;
}


text.value{
    font-size: 200%;
    fill: white;
}

text.label{
    font-size: 100%;
}

.axis text {
    font: 10px sans-serif;
}

.axis path{
    fill: none;
    stroke: #000;
}

.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.axis .tick line {
    stroke-width: 1;
    stroke: rgba(0, 0, 0, 0.2);
}

.axisHorizontal path{
    fill: none;
}

.axisHorizontal line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.axisHorizontal .tick line {
    stroke-width: 1;
    stroke: rgba(0, 0, 0, 0.2);
}

.bar {
    fill: steelblue;
    fill-opacity: .9;
}

.x.axis path {
    display: none;
}

